[package]
name = "bela-sys"
version = "0.3.8-h"
authors = ["tharvik"]
links = "bela"
edition = "2021"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
libc = "0.2"
nix = { version = "0.28", features = ["signal"] }

[features]
static = []
midi = []
trill = ["dep:cc"]

[[example]]
name = "hello"

[[example]]
name = "midi"
required-features = ["midi"]
